# o2

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
Editor/Sources/o2Editor/: EditorMain.cpp
Framework/3rdPartyLibs/Box2D/: CMakeLists.txt
Framework/Sources/o2/: EngineSettings.cpp
Framework/Tests/: TestFileImpl.cpp  TestFileSystemImpl.cpp  TestTimer.cpp
o2Editor/: EditorConfig.xml
o2Editor/Sources/: CodeToolCache.xml
o2Engine/OSX/dependencies.xcodeproj/: project.pbxproj
o2Engine/OSX/o2engine.xcodeproj/: project.pbxproj
o2Engine/Sources/: CodeToolCache.xml  O2.h
o2Engine/Sources/Animation/: Animatable.cpp  Animatable.h  AnimatedValue.cpp  AnimatedValue.h  Animation.cpp  Animation.h
o2Engine/Sources/Application/: Application.cpp  Application.h  Input.cpp  Input.h
o2Engine/Sources/Assets/: ActorAsset.cpp  ActorAsset.h  AnimationAsset.cpp  AnimationAsset.h  Asset.cpp  Asset.h  AssetInfo.cpp  AssetInfo.h  Assets.cpp  AssetsTree.cpp  AssetsTree.h  AtlasAsset.cpp  AtlasAsset.h  BinaryAsset.cpp  BinaryAsset.h  BitmapFontAsset.cpp  BitmapFontAsset.h  DataAsset.cpp  DataAsset.h  FolderAsset.cpp  FolderAsset.h  ImageAsset.cpp  ImageAsset.h  VectorFontAsset.cpp  VectorFontAsset.h
o2Engine/Sources/Config/: ProjectConfig.cpp
o2Engine/Sources/Events/: EventSystem.cpp  EventSystem.h
o2Engine/Windows/: o2engine.vcxproj
o2TestProject/Sources/: BasicUIStyle.cpp  ITestScreen.h  MainTestScreen.cpp  MainTestScreen.h  TestApplication.cpp  TestApplication.h  TextTestScreen.cpp  TextTestScreen.h  UITestScreen.cpp  UITestScreen.h
(+251 files in other folders)
